_includes/manuals/1.7/3.2.2_installer_options.md

The installer is a collection of Puppet modules, which have a large number of parameters available to customize the configuration.  Parameters can be set by running `foreman-installer` with arguments, e.g. `--foreman-db-type`, changing settings in interactive mode or by setting up an answers file.

The precedence for settings is for those set by arguments to foreman-installer or interactive mode, then the answers file, then the Puppet manifest defaults.

#### foreman-installer arguments

Every parameter available in the installer can be set using command line arguments to `foreman-installer`.  Run `foreman-installer --help` for a list of every available option.

When running the installer, all arguments passed on the command line will be persisted by default to /etc/foreman/foreman-installer.yaml and used automatically on subsequent runs, without needing to specify those arguments again.  This persistence can be disabled with the `-b` option.

#### Interactive mode

The installer also provides a text driven interface to customize configuration parameters, and can be run by executing:

{% highlight bash %}
foreman-installer -i
{% endhighlight %}

#### Plugins and compute resources

The installer contains a number of high level modules (e.g. "foreman", "puppet") and additionally a number of smaller modules for additional functionality, such as plugins and compute resource support.  These can be added with the "--enable" switches, or the default options can be disabled with "--no-enable" switches.

More information about compute resources can be found in the [Compute Resources section](/manuals/{{page.version}}/index.html#5.2ComputeResources) and plugins in the [Plugins section](/manuals/{{page.version}}/index.html#6.Plugins).

<!-- Generated by hand from `foreman-installer -h | grep enable-` -->
<div>
  <table class="table table-bordered table-condensed">
    <thead>
      <tr>
        <th>Option</th>
        <th>Description</th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td style='white-space:nowrap'>--[no-]enable-foreman</td>
        <td>Enable 'foreman' puppet module</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--[no-]enable-foreman-compute-ec2</td>
        <td>Enable 'foreman_compute_ec2' puppet module</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--[no-]enable-foreman-compute-gce</td>
        <td>Enable 'foreman_compute_gce' puppet module</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--[no-]enable-foreman-compute-libvirt</td>
        <td>Enable 'foreman_compute_libvirt' puppet module</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--[no-]enable-foreman-compute-openstack</td>
        <td>Enable 'foreman_compute_openstack' puppet module</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--[no-]enable-foreman-compute-ovirt</td>
        <td>Enable 'foreman_compute_ovirt' puppet module</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--[no-]enable-foreman-compute-rackspace</td>
        <td>Enable 'foreman_compute_rackspace' puppet module</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--[no-]enable-foreman-compute-vmware</td>
        <td>Enable 'foreman_compute_vmware' puppet module</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--[no-]enable-foreman-plugin-bootdisk</td>
        <td>Enable 'foreman_plugin_bootdisk' puppet module (<a href="https://github.com/theforeman/foreman_bootdisk">foreman_bootdisk</a>)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--[no-]enable-foreman-plugin-chef</td>
        <td>Enable 'foreman_plugin_chef' puppet module (<a href="https://github.com/theforeman/foreman_chef">foreman_chef</a>)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--[no-]enable-foreman-plugin-default-hostgroup</td>
        <td>Enable 'foreman_plugin_default_hostgroup' puppet module (<a href="https://github.com/GregSutcliffe/foreman_default_hostgroup">foreman_default_hostgroup</a>)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--[no-]enable-foreman-plugin-discovery</td>
        <td>Enable 'foreman_plugin_discovery' puppet module (<a href="https://github.com/theforeman/foreman_discovery">foreman_discovery</a>)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--[no-]enable-foreman-plugin-hooks</td>
        <td>Enable 'foreman_plugin_hooks' puppet module (<a href="https://github.com/theforeman/foreman_hooks">foreman_hooks</a>)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--[no-]enable-foreman-plugin-ovirt-provision</td>
        <td>Enable 'foreman_plugin_ovirt_provision' puppet module (<a href="https://github.com/theforeman/ovirt_provision_plugin">ovirt_provision_plugin</a>)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--[no-]enable-foreman-plugin-puppetdb</td>
        <td>Enable 'foreman_plugin_puppetdb' puppet module (<a href="https://github.com/theforeman/puppetdb_foreman">puppetdb_foreman</a>)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--[no-]enable-foreman-plugin-setup</td>
        <td>Enable 'foreman_plugin_setup' puppet module (<a href="https://github.com/theforeman/foreman_setup">foreman_setup</a>)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--[no-]enable-foreman-plugin-tasks</td>
        <td>Enable 'foreman_plugin_tasks' puppet module (<a href="https://github.com/theforeman/foreman-tasks">foreman-tasks</a>)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--[no-]enable-foreman-plugin-templates</td>
        <td>Enable 'foreman_plugin_templates' puppet module (<a href="https://github.com/theforeman/foreman_templates">foreman_templates</a>)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--[no-]enable-foreman-proxy</td>
        <td>Enable 'foreman_proxy' puppet module</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--[no-]enable-foreman-proxy-plugin-pulp</td>
        <td>Enable 'foreman_proxy_plugin_pulp' puppet module (<a href="https://github.com/theforeman/smart-proxy-pulp">smart-proxy-pulp</a>)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--[no-]enable-puppet</td>
        <td>Enable 'puppet' puppet module</td>
      </tr>
    </tbody>
  </table>
</div>

#### Available options

<!-- Generated with:
/usr/lib/ruby/gems/*/bin/kafo-export-params -c /etc/foreman/foreman-installer.yaml -f html
-->
<div id="all-installer-options">
  <table class="table table-bordered table-condensed">
    <thead>
      <tr>
        <th>Option</th>
        <th>Description</th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td style='white-space:nowrap'>--foreman-admin-email</td>
        <td>E-mail address of the initial admin user</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-admin-first-name</td>
        <td>First name of the initial admin user</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-admin-last-name</td>
        <td>Last name of the initial admin user</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-admin-password</td>
        <td>Password of the initial admin user, default is randomly generated</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-admin-username</td>
        <td>Username for the initial admin user</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-app-root</td>
        <td>Name of foreman root directory</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-authentication</td>
        <td>Enable user authentication. Initial credentials are set using admin_username and admin_password.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-configure-brightbox-repo</td>
        <td>Configure the Brightbox PPA for Ubuntu, providing updated Ruby and Passenger packages</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-configure-epel-repo</td>
        <td>If disabled the EPEL repo will not be configured on RedHat family systems.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-configure-ipa-repo</td>
        <td>Enable custom yum repo with packages needed for external authentication via IPA, this may be needed on RHEL 6.5 and older.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-configure-scl-repo</td>
        <td>If disabled the the SCL repo will not be configured on Red Hat clone systems. (Currently only installs repos for CentOS and Scientific)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-custom-repo</td>
        <td>No need to change anything here by default if set to true, no repo will be added by this module, letting you to set it to some custom location.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-db-adapter</td>
        <td>Database 'production' adapter</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-db-database</td>
        <td>Database 'production' database (e.g. foreman)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-db-host</td>
        <td>Database 'production' host</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-db-manage</td>
        <td>if enabled, will install and configure the database server on this host</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-db-password</td>
        <td>Database 'production' password (default is random)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-db-port</td>
        <td>Database 'production' port</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-db-sslmode</td>
        <td>Database 'production' ssl mode</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-db-type</td>
        <td>Database 'production' type (valid types: mysql/postgresql/sqlite)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-db-username</td>
        <td>Database 'production' user (e.g. foreman)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-environment</td>
        <td>Rails environment of foreman</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-foreman-url</td>
        <td>URL on which foreman is going to run</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-gpgcheck</td>
        <td>turn on/off gpg check in repo files (effective only on RedHat family systems)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-group</td>
        <td>Primary group for the Foreman user</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-http-keytab</td>
        <td>Path to keytab to be used for Kerberos authentication on the WebUI</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-initial-location</td>
        <td>Name of an initial location</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-initial-organization</td>
        <td>Name of an initial organization</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-ipa-authentication</td>
        <td>Enable configuration for external authentication via IPA</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-ipa-manage-sssd</td>
        <td>If ipa_authentication is true, should the installer manage SSSD? You can disable it if you use another module for SSSD configuration</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-locations-enabled</td>
        <td>Enable locations?</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-oauth-active</td>
        <td>Enable OAuth authentication for REST API</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-oauth-consumer-key</td>
        <td>OAuth consumer key</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-oauth-consumer-secret</td>
        <td>OAuth consumer secret</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-oauth-map-users</td>
        <td>Should foreman use the foreman_user header to identify API user?</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-organizations-enabled</td>
        <td>Enable organizations?</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-pam-service</td>
        <td>PAM service used for host-based access control in IPA</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-passenger</td>
        <td>Configure foreman via apache and passenger</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-passenger-interface</td>
        <td>Defines which network interface passenger should listen on, undef means all interfaces</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-passenger-min-instances</td>
        <td>Minimum passenger worker instances to keep when application is idle.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-passenger-prestart</td>
        <td>Pre-start the first passenger worker instance process during httpd start.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-passenger-ruby</td>
        <td>Ruby interpreter used to run Foreman under Passenger</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-passenger-ruby-package</td>
        <td>Package to install to provide Passenger libraries for the active Ruby interpreter</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-passenger-scl</td>
        <td>Software collection name (on RHEL currently 'ruby193', undef on others) Deprecated, specify passenger_ruby and passenger_ruby_package instead.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-passenger-start-timeout</td>
        <td>Amount of seconds to wait for Ruby application boot.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-puppet-home</td>
        <td>Puppet home directory</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-repo</td>
        <td>This can be stable, rc, or nightly</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-selinux</td>
        <td>when undef, foreman-selinux will be installed if SELinux is enabled setting to false/true will override this check (e.g. set to false on 1.1)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-server-ssl-ca</td>
        <td>Defines Apache mod_ssl SSLCACertificateFile setting in Foreman vhost conf file.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-server-ssl-cert</td>
        <td>Defines Apache mod_ssl SSLCertificateFile setting in Foreman vhost conf file.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-server-ssl-chain</td>
        <td>Defines Apache mod_ssl SSLCertificateChainFile setting in Foreman vhost conf file.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-server-ssl-key</td>
        <td>Defines Apache mod_ssl SSLCertificateKeyFile setting in Foreman vhost conf file.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-servername</td>
        <td>Server name of the VirtualHost in the webserver</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-ssl</td>
        <td>Enable and set require_ssl in Foreman settings (note: requires passenger, SSL does not apply to kickstarts)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-unattended</td>
        <td>Should foreman manage host provisioning as well</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-use-vhost</td>
        <td>Enclose apache configuration in <VirtualHost>...</VirtualHost></td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-user</td>
        <td>User under which foreman will run</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-user-groups</td>
        <td>Additional groups for the Foreman user</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-version</td>
        <td>foreman package version, it's passed to ensure parameter of package resource can be set to specific version number, 'latest', 'present' etc.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-websockets-encrypt</td>
        <td>Whether to encrypt websocket connections</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-websockets-ssl-cert</td>
        <td>SSL certificate file to use when encrypting websocket connections</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-websockets-ssl-key</td>
        <td>SSL key file to use when encrypting websocket connections</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-cli-foreman-url</td>
        <td>URL on which Foreman runs</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-cli-manage-root-config</td>
        <td>Whether to manage /root/.hammer configuration.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-cli-password</td>
        <td>Password for authentication</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-cli-refresh-cache</td>
        <td>Check API documentation cache status on each request</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-cli-request-timeout</td>
        <td>API request timeout, set -1 for infinity</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-cli-username</td>
        <td>Username for authentication</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-plugin-discovery-initrd</td>
        <td>name of initrd image file</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-plugin-discovery-install-images</td>
        <td>should the installer download and setup discovery images for you? the average size is few hundreds of MB</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-plugin-discovery-kernel</td>
        <td>name of kernel file</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-plugin-discovery-source</td>
        <td>mirror url from which the image files should be obtained, you can use http(s):// or file://</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-plugin-discovery-version</td>
        <td>version string of discovery image, in form of x.y.z-r</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-autosign-location</td>
        <td>Path to autosign configuration file</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-bmc</td>
        <td>Use BMC</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-bmc-default-provider</td>
        <td>BMC default provider.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-custom-repo</td>
        <td>No need to change anything here by default if set to true, no repo will be added by this module, letting you to set it to some custom location.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-customrun-args</td>
        <td>Puppet customrun command arguments</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-customrun-cmd</td>
        <td>Puppet customrun command</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-dhcp</td>
        <td>Use DHCP</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-dhcp-config</td>
        <td>DHCP config file path</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-dhcp-gateway</td>
        <td>DHCP pool gateway</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-dhcp-interface</td>
        <td>DHCP listen interface</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-dhcp-key-name</td>
        <td>DHCP key name</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-dhcp-key-secret</td>
        <td>DHCP password</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-dhcp-leases</td>
        <td>DHCP leases file</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-dhcp-managed</td>
        <td>DHCP is managed by Foreman proxy</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-dhcp-nameservers</td>
        <td>DHCP nameservers</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-dhcp-range</td>
        <td>Space-separated DHCP pool range</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-dhcp-vendor</td>
        <td>DHCP vendor</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-dir</td>
        <td>Foreman proxy install directory</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-dns</td>
        <td>Use DNS</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-dns-forwarders</td>
        <td>DNS forwarders</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-dns-interface</td>
        <td>DNS interface</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-dns-managed</td>
        <td>DNS is managed by Foreman proxy</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-dns-provider</td>
        <td>DNS provider</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-dns-reverse</td>
        <td>DNS reverse zone name</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-dns-server</td>
        <td>Address of DNS server to manage</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-dns-tsig-keytab</td>
        <td>Kerberos keytab for DNS updates using GSS-TSIG authentication</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-dns-tsig-principal</td>
        <td>Kerberos principal for DNS updates using GSS-TSIG authentication</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-dns-ttl</td>
        <td>DNS default TTL override</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-dns-zone</td>
        <td>DNS zone name</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-foreman-base-url</td>
        <td>Base Foreman URL used for REST interaction</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-freeipa-remove-dns</td>
        <td>Remove DNS entries from FreeIPA when deleting hosts from realm</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-gpgcheck</td>
        <td>Turn on/off gpg check in repo files (effective only on RedHat family systems)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-keyfile</td>
        <td>DNS server keyfile path</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-log</td>
        <td>Foreman proxy log file</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-manage-sudoersd</td>
        <td>Whether to manage File['/etc/sudoers.d'] or not.  When reusing this module, this may be disabled to let a dedicated sudo module manage it instead.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-oauth-consumer-key</td>
        <td>OAuth key to be used for REST interaction</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-oauth-consumer-secret</td>
        <td>OAuth secret to be used for REST interaction</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-oauth-effective-user</td>
        <td>User to be used for REST interaction</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-port</td>
        <td>Port on which will foreman proxy listen</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-puppet-group</td>
        <td>Groups of Foreman proxy user</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-puppet-ssl-ca</td>
        <td>SSL CA used to verify connections when accessing the Puppet master API</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-puppet-ssl-cert</td>
        <td>SSL certificate used when accessing the Puppet master API</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-puppet-ssl-key</td>
        <td>SSL private key used when accessing the Puppet master API</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-puppet-url</td>
        <td>URL of the Puppet master itself for API requests</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-puppet-use-environment-api</td>
        <td>Override use of Puppet's API to list environments.  When unset, the proxy will try to determine this automatically.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-puppet-user</td>
        <td>Which user to invoke sudo as to run puppet commands</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-puppetca</td>
        <td>Use Puppet CA</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-puppetca-cmd</td>
        <td>Puppet CA command to be allowed in sudoers</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-puppetdir</td>
        <td>Puppet var directory</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-puppetrun</td>
        <td>Enable puppet run/kick management</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-puppetrun-cmd</td>
        <td>Puppet run/kick command to be allowed in sudoers</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-puppetrun-provider</td>
        <td>Set puppet_provider to handle puppet run/kick via mcollective</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-puppetssh-command</td>
        <td>The command used by puppetrun_provider puppetssh</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-puppetssh-keyfile</td>
        <td>The keyfile for puppetrun_provider puppetssh commands</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-puppetssh-sudo</td>
        <td>Whether to use sudo before commands when using puppetrun_provider puppetssh</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-puppetssh-user</td>
        <td>The user for puppetrun_provider puppetssh</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-puppetssh-wait</td>
        <td>Whether to wait for completion of the Puppet command over SSH and return the exit code</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-realm</td>
        <td>Use realm management</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-realm-keytab</td>
        <td>Kerberos keytab path to authenticate realm updates</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-realm-principal</td>
        <td>Kerberos principal for realm updates</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-realm-provider</td>
        <td>Realm management provider</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-register-in-foreman</td>
        <td>Register proxy back in Foreman</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-registered-name</td>
        <td>Proxy name which is registered in Foreman</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-registered-proxy-url</td>
        <td>Proxy URL which is registered in Foreman</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-repo</td>
        <td>This can be stable, rc, or nightly</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-ssl</td>
        <td>Enable SSL, ensure proxy is added with "https://" protocol if true</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-ssl-ca</td>
        <td>If CA is specified, remote Foreman host will be verified</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-ssl-cert</td>
        <td>Used to communicate to Foreman</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-ssl-key</td>
        <td>Corresponding key to a certificate</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-ssldir</td>
        <td>Puppet CA ssl directory</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-tftp</td>
        <td>Use TFTP</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-tftp-dirs</td>
        <td>Directories to be create in $tftp_root</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-tftp-root</td>
        <td>TFTP root directory</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-tftp-servername</td>
        <td>Defines the TFTP Servername to use, overrides the name in the subnet declaration</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-tftp-syslinux-files</td>
        <td>Syslinux files to install on TFTP (copied from $tftp_syslinux_root)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-tftp-syslinux-root</td>
        <td>Directory that hold syslinux files</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-trusted-hosts</td>
        <td>Only hosts listed will be permitted, empty array to disable authorization</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-use-sudoersd</td>
        <td>Add a file to /etc/sudoers.d (true) or uses augeas (false)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-user</td>
        <td>User under which foreman proxy will run</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-version</td>
        <td>foreman package version, it's passed to ensure parameter of package resource can be set to specific version number, 'latest', 'present' etc.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-virsh-network</td>
        <td>Network for virsh DNS/DHCP provider</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-plugin-pulp-enabled</td>
        <td>enables/disables the plugin</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-plugin-pulp-group</td>
        <td>group owner of the configuration file</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--foreman-proxy-plugin-pulp-pulp-url</td>
        <td>pulp url to use</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-agent</td>
        <td>Should a puppet agent be installed</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-agent-noop</td>
        <td>Run the agent in noop mode.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-agent-template</td>
        <td>Use a custom template for the agent puppet configuration.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-allow-any-crl-auth</td>
        <td>Allow any authentication for the CRL. This is needed on the puppet CA to accept clients from a the puppet CA proxy.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-auth-allowed</td>
        <td>An array of authenticated nodes allowed to access all catalog and node endpoints. default to ['$1']</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-auth-template</td>
        <td>Use a custom template for the auth configuration.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-ca-server</td>
        <td>Use a different ca server. Should be either a string with the location of the ca_server or 'false'.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-classfile</td>
        <td>The file in which puppet agent stores a list of the classes associated with the retrieved configuration.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-client-package</td>
        <td>Install a custom package to provide the puppet client</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-configtimeout</td>
        <td>How long the client should wait for the configuration to be retrieved before considering it a failure.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-cron-cmd</td>
        <td>Specify command to launch when runmode is set 'cron'.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-dir</td>
        <td>Override the puppet directory.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-dns-alt-names</td>
        <td>Use additional DNS names when generating a certificate.  Defaults to an empty Array.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-group</td>
        <td>Override the name of the puppet group.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-hiera-config</td>
        <td>The hiera configuration file. Defaults to '$confdir/hiera.yaml'.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-listen</td>
        <td>Should the puppet agent listen for connections.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-main-template</td>
        <td>Use a custom template for the main puppet configuration.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-nsauth-template</td>
        <td>Use a custom template for the nsauth configuration.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-pluginsource</td>
        <td>URL to retrieve Puppet plugins from during pluginsync</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-pluginsync</td>
        <td>Enable pluginsync.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-port</td>
        <td>Override the port of the master we connect to.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-puppetmaster</td>
        <td>Hostname of your puppetmaster (server directive in puppet.conf)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-runinterval</td>
        <td>Set up the interval (in seconds) to run the puppet agent.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-runmode</td>
        <td>Select the mode to setup the puppet agent. Can be either 'cron', 'service', or 'none'.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server</td>
        <td>Should a puppet master be installed as well as the client</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-app-root</td>
        <td>Directory where the application lives</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-ca</td>
        <td>Provide puppet CA</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-ca-proxy</td>
        <td>The actual server that handles puppet CA. Setting this to anything non-empty causes the apache vhost to set up a proxy for all certificates pointing to the value.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-certname</td>
        <td>The name to use when handling certificates.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-common-modules-path</td>
        <td>Common modules paths (only when $server_git_repo_path and $server_dynamic_environments are false)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-config-version</td>
        <td>How to determine the configuration version. When using git_repo, by default a git describe approach will be installed.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-dir</td>
        <td>Puppet configuration directory</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-directory-environments</td>
        <td>Enable directory environments, defaulting to true with Puppet 3.6.0 or higher</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-dynamic-environments</td>
        <td>Use $environment in the modulepath Deprecated when $server_directory_environments is true, set $server_environments to [] instead.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-enc-api</td>
        <td>What version of enc script to deploy. Valid values are 'v2' for latest, and 'v1' for Foreman =< 1.2</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-environments</td>
        <td>Environments to setup (creates directories). Applies only when $server_dynamic_environments is false</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-environments-group</td>
        <td>The group owning the environments directory</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-environments-mode</td>
        <td>Environments directory mode.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-environments-owner</td>
        <td>The owner of the environments directory</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-envs-dir</td>
        <td>Directory that holds puppet environments</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-external-nodes</td>
        <td>External nodes classifier executable</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-facts</td>
        <td>Should foreman receive facts from puppet</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-foreman-ssl-ca</td>
        <td>SSL CA of the Foreman server</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-foreman-ssl-cert</td>
        <td>Client certificate for authenticating against Foreman server</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-foreman-ssl-key</td>
        <td>Key for authenticating against Foreman server</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-foreman-url</td>
        <td>Foreman URL</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-git-branch-map</td>
        <td>Git branch to puppet env mapping for the default post receive hook</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-git-repo</td>
        <td>Use git repository as a source of modules</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-git-repo-path</td>
        <td>Git repository path</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-group</td>
        <td>Name of the puppetmaster group.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-httpd-service</td>
        <td>Apache/httpd service name to notify on configuration changes. Defaults to 'httpd' based on the default apache module included with foreman-installer.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-implementation</td>
        <td>Puppet master implementation, either "master" (traditional Ruby) or "puppetserver" (JVM-based)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-manifest-path</td>
        <td>Path to puppet site.pp manifest (only when $server_git_repo_path and $server_dynamic_environments are false)</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-package</td>
        <td>Custom package name for puppet master</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-passenger</td>
        <td>If set to true, we will configure apache with passenger. If set to false, we will enable the default puppetmaster service unless service_fallback is set to false. See 'Advanced server parameters' for more information. Only applicable when server_implementation is "master".</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-passenger-max-pool</td>
        <td>The PassengerMaxPoolSize parameter. If your host is low on memory, it may be a good thing to lower this. Defaults to 12.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-port</td>
        <td>Puppet master port</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-post-hook-content</td>
        <td>Which template to use for git post hook</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-post-hook-name</td>
        <td>Name of a git hook</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-puppet-basedir</td>
        <td>Where is the puppet code base located</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-puppet-home</td>
        <td>Puppet var directory</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-report-api</td>
        <td>What version of report processor to deploy. Valid values are 'v2' for latest, and 'v1' for Foreman =< 1.2</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-reports</td>
        <td>List of report types to include on the puppetmaster</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-service-fallback</td>
        <td>If passenger is not used, do we want to fallback to using the puppetmaster service? Set to false if you disabled passenger and you do NOT want to use the puppetmaster service. Defaults to true.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-ssl-dir</td>
        <td>SSL directory</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-storeconfigs-backend</td>
        <td>Do you use storeconfigs? (note: not required) false if you don't, "active_record" for 2.X style db, "puppetdb" for puppetdb</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-strict-variables</td>
        <td>if set to true, it will throw parse errors when accessing undeclared variables.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-template</td>
        <td>Which template should be used for master configuration</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-user</td>
        <td>Name of the puppetmaster user.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-server-vardir</td>
        <td>Puppet data directory.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-show-diff</td>
        <td>Show and report changed files with diff output</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-splay</td>
        <td>Switch to enable a random amount of time to sleep before each run.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-splaylimit</td>
        <td>The maximum time to delay before runs. Defaults to being the same as the run interval. This setting can be a time interval in seconds (30 or 30s), minutes (30m), hours (6h), days (2d), or years (5y).</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-srv-domain</td>
        <td>Search domain for SRV records</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-syslogfacility</td>
        <td>Facility name to use when logging to syslog</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-use-srv-records</td>
        <td>Whether DNS SRV records will be used to resolve the Puppet master</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-usecacheonfailure</td>
        <td>Switch to enable use of cached catalog on failure of run.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-user</td>
        <td>Override the name of the puppet user.</td>
      </tr>
      <tr>
        <td style='white-space:nowrap'>--puppet-version</td>
        <td>Specify a specific version of a package to install. The version should be the exact match for your distro. You can also use certain values like 'latest'.</td>
      </tr>
    </tbody>
  </table>
</div>

#### Answers file

The answers file describes the classes that will be applied to the host to
install Foreman, along with their parameters.  The foreman-installer package stores it at `/etc/foreman/foreman-installer.yaml`.  By default, the *all-in-one* setup will include Foreman, a puppetmaster, Puppet agent, and the Smart Proxy:

{% highlight yaml %}
---
foreman:
  custom_repo: true
foreman_proxy:
  custom_repo: true
puppet:
  server: true
{% endhighlight %}

Other examples are given in the next section, or `/usr/share/foreman-installer/README.md`.
